Feat: 용돈관련 초기 설계 - 컨트롤러, 서비스, 레포지토리 생성 - 공통 DTO생성 - 스웨거 적용

--- a/Idontcare/src/main/resources/application.properties.template
+++ b/Idontcare/src/main/resources/application.properties.template
@@ -18,3 +18,11 @@ spring.main.allow-bean-definition-overriding=true
 
 # Batch Loading #
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
+
+# Swagger #
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
+springdoc.swagger-ui.path=/
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.operations-sorter=alpha
