--- a/openBank/src/main/resources/application.properties
+++ b/openBank/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 # Batch Loading #
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
