--- a/Idontcare/src/main/resources/application.properties.template
+++ b/Idontcare/src/main/resources/application.properties.template
@@ -1,7 +1,7 @@
 # Server Setting #
 server.port={Integer port_number}
 
-# DB Setting #
+# DB Setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://{String host}:{String port}/{String database}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username={String username}
