--- a/Front/package.json
+++ b/Front/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-qr-code": "^2.0.12",
+    "react-router-dom": "^6.15.0",
+    "react-web-qr-reader": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.17",
