--- a/Idontcare/build.gradle
+++ b/Idontcare/build.gradle
@@ -31,7 +31,8 @@ dependencies {
 	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0")
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
-	compileOnly 'org.projectlombok:lombok'
+  testImplementation 'org.projectlombok:lombok:1.18.28'
+  compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation group : 'io.jsonwebtoken', name:'jjwt',version:'0.9.1'
