--- a/Front/package.json
+++ b/Front/package.json
@@ -11,9 +11,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.17",
