--- a/Front/package.json
+++ b/Front/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "react-select": "^5.7.4"
+    "react-select": "^5.7.4",
     "react-qr-code": "^2.0.12",
     "react-web-qr-reader": "^1.0.4"
   },
