--- a/Front/package.json
+++ b/Front/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.2",
+    "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "react-select": "^5.7.4",
     "react-qr-code": "^2.0.12",
-    "react-web-qr-reader": "^1.0.4"
+    "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.17",
