--- a/Idontcare/build.gradle
+++ b/Idontcare/build.gradle
@@ -33,11 +33,16 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+	implementation 'io.jsonwebtoken:jjwt'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson'
+
 	testImplementation 'org.projectlombok:lombok:1.18.28'
-  	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
-	implementation group : 'io.jsonwebtoken', name:'jjwt',version:'0.9.1'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
