--- a/Idontcare/build.gradle
+++ b/Idontcare/build.gradle
@@ -30,13 +30,12 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0")
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
-	implementation 'io.jsonwebtoken:jjwt'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson'
+	implementation group : 'io.jsonwebtoken', name:'jjwt',version:'0.9.1'
 
 	testImplementation 'org.projectlombok:lombok:1.18.28'
 	compileOnly 'org.projectlombok:lombok'
