Fix: 로그인 에러 해결 - 가상계좌관련 이름 변경 - 로그인 에러 해결

--- a/Idontcare/src/main/resources/application.properties.template
+++ b/Idontcare/src/main/resources/application.properties.template
@@ -36,3 +36,6 @@ redis.port={레디스 포트: Number}
 jwt.secret={시크릿 키: String}
 jwt.access-expiration-time=43200000
 jwt.refresh-expiration-time=604800000
+
+# Open Banking Setting #
+openbank.url={호스트 : String}:{포트 : Number}
