--- a/openBank/src/main/resources/application.properties
+++ b/openBank/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 server.port=8080
 
 # DB Setting #
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/open_bank?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/open_bank?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://svc.sel5.cloudtype.app:31854/open_bank?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://svc.sel5.cloudtype.app:31854/open_bank?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
 spring.datasource.username=root
 spring.datasource.password=root
