--- a/openBank/src/main/resources/application.properties
+++ b/openBank/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/open_bank?serverTimezone=Asia/
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://svc.sel5.cloudtype.app:31854/open_bank?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.data=classpath:data.sql
