--- a/Front/package.json
+++ b/Front/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.2",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
     "axios": "^1.5.0",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
