--- a/openBank/src/main/resources/application.properties
+++ b/openBank/src/main/resources/application.properties
@@ -20,7 +20,7 @@ decorator.datasource.p6spy.enable-logging=true
 
 # JPQ Setting #
 # create -> create-drop -> update -> none
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
