--- a/Idontcare/src/main/resources/application.properties.template
+++ b/Idontcare/src/main/resources/application.properties.template
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://{호스트: String}:{포트번호: Number}/{데이터베이스 이름: String}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username={DB 아이디: String}
 spring.datasource.password={DB 패스워드: String}
+spring.main.allow-circular-references=true
 
 # DB Logging #
 # Development Level #
