--- a/Front/package.json
+++ b/Front/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0"
   },
