--- a/relation-service/src/main/resources/application.properties
+++ b/relation-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=0
 
-spring.application.name=user-service
+spring.application.name=relation-service
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.register-with-eureka=true
