Feat:properties 파일 추기

--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=18001
 
+spring.application.name=apigateway
+
+eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=false
