Feat: yml 파일 수정

--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -6,7 +6,7 @@ eureka:
         register-with-eureka: true
         fetch-registry: true
         service-url:
-            defaultZone: http://k9d103a.p.ssafy.io/:${server.port}/eureka/
+            defaultZone: http://k9d103a.p.ssafy.io/${server.port}/eureka/
 
 spring:
     application:
