--- a/eurekaserver/src/main/resources/application.yml
+++ b/eurekaserver/src/main/resources/application.yml
@@ -10,4 +10,4 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://k9d103a.p.ssafy.io/:${server.port}/eureka/
+      defaultZone: http://k9d103a.p.ssafy.io:${server.port}/eureka/
